<resources>
    <string name="accion_mostrar">Mostrar Lugares</string>
    <string name="accion_crear">Crear Lugar</string>
    <string name="accion_preferencias">Preferencias</string>
    <string name="accion_acerca_de">Acerca de </string>
    <string name="accion_salir">Salir</string>
    <string name="app_name">Mis Lugares</string>
    <string name="action_settings">Configuraciones </string>
</resources>
